--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
             text-align: right;
             margin-top: 20px;
             font-size: 18px;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 8px;
         }
 
         .recipe-image {
@@ -158,6 +161,7 @@
     </script>
 </body>
 </html>
+
 
 
 
