--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <script>
         function translateText() {
-            var apiKey = 'YOUR_API_KEY';
+            var apiKey = '165f4a6fb2c9f7';
             var textToTranslate = $('#inputText').val();
             var url = 'https://api.translate.com/translate?langFrom=ar&langTo=en&text=' + encodeURIComponent(textToTranslate) + '&key=' + apiKey;
 
@@ -23,6 +23,7 @@
     </script>
 </body>
 </html>
+
 
 
 
