--- a/index.html
+++ b/index.html
@@ -130,9 +130,10 @@
             color: #333;
         }
         #menu {
+
 	background: #f0f0f0;
-	background: linear-gradient(to bottom,  #f0f0f0,  #404040);
-	color: #FFF;
+	background: linear-gradient(to bottom,  0 2px 4px rgba(0, 0, 0, 0.1); /* ضل للزر */,  #404040);
+	color: black;
 	height: 45px;
 	padding-left: 18px;
 	border-radius: 10px;
